--- a/src/index.html
+++ b/src/index.html
@@ -9,9 +9,9 @@
   <meta name="keywords" content="Angular, Example, App, Base, Project, Seed, Sample, Simple, Boilerplate, Boiler">
   <meta name="robots" content="index,follow">
   <meta name="googlebot" content="index, follow">
-  <meta name="theme-color" content="#3f51b5">
-  <meta name="msapplication-TileColor" content="#3f51b5">
-  <meta name="theme-color" content="#3f51b5"/>
+  <meta name="theme-color" content="#ab56e4">
+  <meta name="msapplication-TileColor" content="#ab56e4">
+  <meta name="theme-color" content="#ab56e4"/>
   <meta name="application-name" content="Angular Example App">
   <meta property="og:site_name" content="Angular Example App">
   <meta property="og:locale" content="es_ES">
