--- a/src/index.html
+++ b/src/index.html
@@ -32,6 +32,7 @@
   <link rel="shortcut icon" href="/assets/images/favicon.ico">
   <link rel="icon" type="image/x-icon" href="/assets/images/favicon.ico">
   <link href="https://fonts.googleapis.com/css?family=Roboto:300,400,700" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css?family=Quicksand:light,light,regular,bold,italic&subset=latin,latin-ext" rel="stylesheet">
   <link rel="manifest" href="/manifest.webmanifest">
 </head>
 <body>
